--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">Via</string>
-
     <string name="navigation_draw_open">Open navigation drawer</string>
     <string name="navigation_draw_close">Close navigation drawer</string>
+    <string name="title_activity_schedules">Schedules</string>
+    <string name="title_activity_bookmarks">Bookmarks</string>
+    <string name="title_activity_search">Search</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="title_activity_privacy_policy">Privacy Policy</string>
+    <string name="title_activity_help_and_feedback">Help &amp; Feedback</string>
 </resources>
